Add tiny animation to cards in Index section on the Home page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -370,6 +370,15 @@
                     align-items: center;
                     position: relative;
 
+                    .side-card, .main-card {
+                        transition: 0.2s ease-in-out;
+                        cursor: pointer;
+
+                        &:hover {
+                            transform: translateY(-15px);
+                        }
+                    }
+
                     .side-card#right {
                         position: relative;
                         rotate: 15deg;
