Change some icons from png to webp, made the Home page more responsive (down to tablet)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="join-discord">
     <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink-container" target="_blank">
       <span class="join-text">Join us on Discord </span>
-      <img src="assets/other/discord-icon.png" alt="Discord Icon">
+      <img src="assets/other/discord-icon.webp" alt="Discord Icon">
     </a>
   </div>
 </div>
@@ -310,7 +310,7 @@
       </span>
       <div class="images">
         <img src="assets/other/huma-book.webp" alt="Huma Sticker">
-        <img src="assets/other/discord-big.png" alt="Discord Logo">
+        <img src="assets/other/discord-big.webp" alt="Discord Logo">
         <img src="assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
