Make changes to responsive Header, all 3 indexes, alll 3 cards. Additionally changed roles such as "SupportBuffer" to appear as "Support Buffer" without breaking functionality

--- a/src/app/matrix-card/matrix-card.component.html
+++ b/src/app/matrix-card/matrix-card.component.html
@@ -1,4 +1,4 @@
-<div class="unit-wrapper" [attr.data-unit]="matrix.slug" [routerLink]="'/matrix-page/' + matrix.slug">
+<div class="matrix-wrapper" [attr.data-unit]="matrix.slug" [routerLink]="'/matrix-page/' + matrix.slug">
   <div class="top-card" style="background-image: url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
     <div class="content-wrapper" style="background-image: url(&quot;../assets/matrices/{{matrix.slug}}_matrix.webp&quot;);">
       <div class="{{matrix.tag}}-tag">{{matrix.tag}}</div>
