--- a/src/app/relic-card/relic-card.component.html
+++ b/src/app/relic-card/relic-card.component.html
@@ -6,7 +6,7 @@
           <h5 class="name">{{relic.name}}</h5>
           <div class="type-and-rarity">
             <div class="icons">
-              <img *ngFor="let role of relic.roles" [src]="'assets/effects/buff_' + role.toLowerCase() + '.png'" [alt]="role">
+              <img *ngFor="let role of relic.roles" [src]="processRoleSlug(role)" [alt]="role">
               <img [src]="'assets/elements/element_' + relic.elementBoost.replace('boost', '').replace('resistance', '') + '.png'" [alt]="relic.elementBoost">
             </div>
             <div class="rarity" [class]="getRarityClass()">
