--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -106,10 +106,16 @@
     }
 }
 
+@media only screen and (max-width: 900px) {
+    .header {
+        padding: 32px 20px;
+    }
+}
+
 @media only screen and (max-width: $tablet) {
     .header {
         height: 80px;
-        padding: 0px 24px;
+        padding: 0px 20px;
 
         .main-menu {
             display: none;
