--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -117,7 +117,7 @@
                     <img src="assets/elements/{{unit?.element}}.png" alt="{{unit?.element}} element">
                   </div>
                   <div class="buffs">
-                    <img *ngFor="let role of unit?.roles" [src]="'assets/effects/buff_' + role?.toLowerCase() + '.png'" [alt]="role">
+                    <img *ngFor="let role of unit?.roles" [src]="processRoleSlug(role)" [alt]="role">
                   </div>
                 </div>
               </div>
@@ -130,7 +130,7 @@
                 <h5 class="name">{{relic.name}}</h5>
                 <div class="type-and-rarity">
                   <div class="icons">
-                    <img *ngFor="let role of relic.roles" [src]="'assets/effects/buff_' + role.toLowerCase() + '.png'" [alt]="role">
+                    <img *ngFor="let role of relic.roles" [src]="processRoleSlug(role)" [alt]="role">
                     <img [src]="'assets/elements/element_' + relic.elementBoost.replace('boost', '').replace('resistance', '') + '.png'" [alt]="relic.elementBoost">
                   </div>
                   <div class="rarity" [class]="getRarityClass()">
