--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -887,3 +887,21 @@
         margin: 40px 0 0 0;
     }
 }
+
+@media only screen and (max-width: $mobile) {
+    .main-home {
+        .inner {
+            .half {
+                .wrapper#indexes {
+                    .indexes-block {
+                        .side-card {
+                            .content-wrapper {
+                                background-position: 50% 10%;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
