--- a/src/app/matrices-index/matrices-index.component.scss
+++ b/src/app/matrices-index/matrices-index.component.scss
@@ -9,6 +9,8 @@
     padding: 12px 20px;
     background-color: $content;
     border-radius: 8px;
+    gap: 16px;
+    flex-wrap: wrap;
 
     .rarity, .element, .type, .role {
         display: flex;
@@ -16,13 +18,14 @@
         gap: 8px;
 
         .title {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 400;
             margin: unset;
         }
 
         .wrapper {
             display: flex;
+            flex-wrap: wrap;
             gap: 8px;
         }
     }
@@ -101,27 +104,34 @@
     }
 }
 
-@media only screen and (max-width: $laptop) { // Card flip animation begins to look clip out of the borders
+@media only screen and (max-width: 1240px) { // Card flip animation begins to look clip out of the borders
     .matrices-index {
         grid-template-columns: repeat(4, 1fr);
     }
 }
 
-@media only screen and (max-width: $tablet) {
+@media only screen and (max-width: $laptop) { // Card flip animation begins to look clip out of the borders
     .matrices-index {
         grid-template-columns: repeat(3, 1fr);
         // gap: 20px;
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: $tablet) {
+    .matrices-category-filter {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 690px) {
     .matrices-index {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media only screen and (max-width: $mobile) {
+@media only screen and (max-width: 470px) {
     .matrices-index {
         grid-template-columns: repeat(1, 1fr);
+        gap: 40px;
     }
 }
