Minor Unit Page responsive changes

--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -1,5 +1,11 @@
 <section class="main" *ngIf="unit">
   <div class="header-element">
+    <div class="header-splash"
+      style="background-image: url(&quot;../assets/splashart/{{unit?.slug}}_a3_splashart.webp&quot;);">
+    </div>
+    <div class="header-splash_mobile">
+      <img src="assets/splashart/{{unit?.slug}}_a3_splashart.webp" alt="Character splash art"> 
+    </div>
     <div class="header-content">
       <div class="unit-wrapper">
         <div class="unit-avatar">
@@ -19,8 +25,7 @@
         </div>
       </div>
       <div class="unit-description">
-        <span><i style="font-size:24px; margin: 0 4px 0 0;"
-            class="fa fa-quote-left"></i>{{unit?.weaponDescription}}</span>
+        <span><i style="font-size:24px; margin: 0 4px 0 0;"class="fa fa-quote-left"></i>{{unit?.weaponDescription}}</span>
       </div>
       <div class="unit-stats">
         <div class="stats-title">Attributes</div>
@@ -68,10 +73,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="header-splash"
-      style="background-image: url(&quot;../assets/splashart/{{unit?.slug}}_a3_splashart.webp&quot;);">
-
     </div>
   </div>
   <div class="body-element">
