--- a/src/app/relic-page/relic-page.component.scss
+++ b/src/app/relic-page/relic-page.component.scss
@@ -144,7 +144,7 @@
         gap: 20px;
         width: 100%;
         padding: 20px 20px;
-        background-color: rgba(41, 41, 42, 0.9);
+        background-color: rgba(41, 41, 42);
 
 
         .tabs {
@@ -158,7 +158,7 @@
                 align-items: center;
                 gap: 8px;
                 border: 1px solid #c49860;
-                padding: 12px 0;
+                padding: 12px 20px;
                 cursor: pointer;
 
                 img {
