--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -6,17 +6,20 @@
     mat-slider {
         width: 100%;
     }
-    .materials-title{
+
+    .materials-title {
         font-size: 28px;
         font-weight: 600;
         padding: 20px 0px 10px 0px;
     }
-    .materials-text{
+
+    .materials-text {
         font-size: 20px;
         font-weight: 200;
         padding: 0px 0px 10px 0px;
     }
-    .materials-req{
+
+    .materials-req {
         color: #7DC9FF;
     }
 }
@@ -71,7 +74,6 @@
         width: 100%;
         min-height: 350px;
 
-
         .header-splash {
             position: absolute;
             overflow: visible;
@@ -83,7 +85,10 @@
             background-position: top;
             background-size: contain;
             background-repeat: no-repeat;
+        }
 
+        .header-splash_mobile {
+            display: none;
         }
 
         .header-content {
@@ -211,7 +216,7 @@
         gap: 20px;
         width: 100%;
         padding: 20px 20px;
-        background-color: rgba(41, 41, 42, 0.9);
+        background-color: rgba(41, 41, 42);
 
         .tabs {
             display: grid;
@@ -224,7 +229,7 @@
                 align-items: center;
                 gap: 8px;
                 border: 1px solid var(--element-color); // first time using one of these, insanely useful actually. check TS.
-                padding: 12px 0;
+                padding: 12px 20px;
                 cursor: pointer;
 
                 img {
@@ -249,162 +254,160 @@
             display: none;
         }
 
- 
-            .info-selection {
-                position: relative;
-                display: flex;
-                border-bottom: 1px solid $border;
-                padding: 0 0 5px 0;
-                margin: 10px 0 0 0;
+        .info-selection {
+            position: relative;
+            display: flex;
+            border-bottom: 1px solid $border;
+            padding: 0 0 5px 0;
+            margin: 10px 0 0 0;
 
-                .info {
-                    text-transform: uppercase;
-                    text-align: center;
-                    color: var(--element-color);
-                    font-weight: 500;
-                    cursor: pointer;
-                    margin: auto; // might be the only time i ever use this 
-                }
-
-                .underline {
-                    position: absolute;
-                    bottom: 0;
-                    height: 3px;
-                    background: white;
-                    bottom: -2px;
-                    width: 0;
-                    left: 0;
-                }
-            }
-
-            p {
-                font-weight: 300;
-                margin: unset;
-            }
-
-            .advancements-table {
-                padding: 0px 80px;
-                width: 100%;
-                display: flex;
-                margin: 30px 0 0 0;
-                flex-direction: column;
-                row-gap: 30px;
-            }
-
-            .advancements-table-row {
-                display: flex;
-                width: 100%;
-                gap: 30px;
-                justify-content: space-between;
-                align-items: center;
-            }
-
-            .advancements-star-column {
-                width: 5%;
-            }
-
-            .advancements-text-column {
-                width: 95%;
-                font-weight: 300;
-            }
-
-            .attack-wrap {
-                padding: 0px 80px;
-                width: 100%;
-                display: flex;
-                margin: 30px 0 0 0;
-                flex-direction: column;
-                row-gap: 20px;
-                font-weight: 300;
-
-                ul {
-                    list-style-position: outside;
-                    padding-left: 0;
-                }
-
-                li {
-                    list-style-type: none;
-                    display: flex;
-                    align-items: flex-start;
-                }
-
-                span.number {
-                    width: 0.8rem;
-                    /* Adjust the width based on your needs */
-                    text-align: center;
-
-                }
-
-                span.text {
-                    margin-left: 0.5rem;
-                    flex: 1;
-                }
-            }
-
-            .attack-heading-wrap {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-                margin-bottom: 20px;
-
-                .attack-icon {
-                    width: 80px;
-                    height: 80px;
-                }
-
-                .trait-icon {
-                    height: 50px;
-                    width: 50px;
-                }
-            }
-
-            .attack-name {
-                font-size: 22px;
-                font-weight: 500;
-                padding-top: 4px;
-            }
-
-            .attack-container {
-                border-bottom: 1px solid $border;
-                padding: 0 0 20px;
-            }
-
-            .attack-container:last-child {
-                border-bottom: none;
-                padding: unset;
-            }
-
-            .attack-heading {
-                display: flex;
-                flex-direction: column;
-                gap: 6px;
-            }
-
-            .attack-method-wrap {
-                display: flex;
-                gap: 10px;
-            }
-
-            .attack-method {
-                padding: 2px 10px;
+            .info {
+                text-transform: uppercase;
+                text-align: center;
                 color: var(--element-color);
-                border-color: var(--element-color);
-                border-style: solid;
-                border-width: 1px;
+                font-weight: 500;
+                cursor: pointer;
+                margin: auto; // might be the only time i ever use this 
             }
 
-            .attack-method p {
-                font-weight: 400;
+            .underline {
+                position: absolute;
+                bottom: 0;
+                height: 3px;
+                background: white;
+                bottom: -2px;
+                width: 0;
+                left: 0;
+            }
+        }
+
+        p {
+            font-weight: 300;
+            margin: unset;
+        }
+
+        .advancements-table {
+            padding: 0px 80px;
+            width: 100%;
+            display: flex;
+            margin: 30px 0 0 0;
+            flex-direction: column;
+            row-gap: 30px;
+        }
+
+        .advancements-table-row {
+            display: flex;
+            width: 100%;
+            gap: 30px;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .advancements-star-column {
+            width: 5%;
+        }
+
+        .advancements-text-column {
+            width: 95%;
+            font-weight: 300;
+        }
+
+        .attack-wrap {
+            padding: 0px 80px;
+            width: 100%;
+            display: flex;
+            margin: 30px 0 0 0;
+            flex-direction: column;
+            row-gap: 20px;
+            font-weight: 300;
+
+            ul {
+                list-style-position: outside;
+                padding-left: 0;
             }
 
-            .attack-description {
-                margin: 0 0 20px 0;
+            li {
+                list-style-type: none;
+                display: flex;
+                align-items: flex-start;
             }
 
-            .attack-paragraph {
-                margin: 0 0 10px 0;
+            span.number {
+                width: 0.8rem;
+                /* Adjust the width based on your needs */
+                text-align: center;
+
             }
-        
+
+            span.text {
+                margin-left: 0.5rem;
+                flex: 1;
+            }
+        }
+
+        .attack-heading-wrap {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 20px;
+
+            .attack-icon {
+                width: 80px;
+                height: 80px;
+            }
+
+            .trait-icon {
+                height: 50px;
+                width: 50px;
+            }
+        }
+
+        .attack-name {
+            font-size: 22px;
+            font-weight: 500;
+            padding-top: 4px;
+        }
+
+        .attack-container {
+            border-bottom: 1px solid $border;
+            padding: 0 0 20px;
+        }
+
+        .attack-container:last-child {
+            border-bottom: none;
+            padding: unset;
+        }
+
+        .attack-heading {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        .attack-method-wrap {
+            display: flex;
+            gap: 10px;
+        }
+
+        .attack-method {
+            padding: 2px 10px;
+            color: var(--element-color);
+            border-color: var(--element-color);
+            border-style: solid;
+            border-width: 1px;
+        }
+
+        .attack-method p {
+            font-weight: 400;
+        }
+
+        .attack-description {
+            margin: 0 0 20px 0;
+        }
+
+        .attack-paragraph {
+            margin: 0 0 10px 0;
+        }
     }
 }
 
@@ -422,4 +425,50 @@
 .stats img,
 .roles img {
     width: 28px;
+}
+
+@media only screen and (max-width: $tablet) {
+    .main {
+        gap: 40px;
+
+        .header-element {
+            flex-direction: column;
+            position: relative;
+            min-height: unset;
+
+            .header-splash {
+                display: none;
+            }
+
+            .header-splash_mobile {
+                display: block;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .header-content {
+                background-color: $content;
+            }
+        }
+
+        .body-element {
+            .tabs {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .profile-part {
+                .underline {
+                    display: none; // up for debate
+                }
+            }
+
+            .scroll {
+                .advancements-table, .attack-wrap {
+                    padding: unset;
+                }
+            }
+        }
+    }
 }
