Add Ji Yu to Simulacra and Matrix data files, change dummy text on About Us and Glossary

--- a/src/app/glossary/glossary.component.html
+++ b/src/app/glossary/glossary.component.html
@@ -13,7 +13,7 @@
       <h3 class="title">Glossary</h3>
       <h4 class="subtitle">A Collection of Terms</h4>
     </div>
-    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa maxime sunt in, soluta dolorum aliquam reiciendis vitae omnis dicta doloremque saepe blanditiis, quam similique qui cumque accusamus, voluptate recusandae nulla?</p>
+    <p class="description">This glossary is a collection of both game-specific and general gaming terminology to help new players learn common terms and abbreviations used on this website as well as in the game. If you believe there is another term that should be included, please let us know on Discord.</p>
   </div>
   <div class="term-list">
     <ng-container *ngFor="let term of terms">
