--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -4,7 +4,7 @@
       <h3 class="title">Arcana Sanctuary</h3>
       <h4 class="subtitle">Project Team</h4>
     </div>
-    <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sitamet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
+    <p class="description">Meet the (digital) faces behind the Arcana Sanctuary community project. This page lists everyone who has contributed to the project in one way or another, a Discord handle to reach out for questions, and a maybe funny one-liner.</p>
     <div class="discord">
       <a href="https://discord.gg/FPtYFtpUF3" target="_blank" class="hyperlink-image">
         <img src="assets/other/discord-bubble.webp" alt="Discord Icon" class="icon">
